@@ -1,4 +1,5 @@
 package io.github.m4gshm.components.visualizer.model;
+import lombok.var;
 
 import lombok.Builder;
 import lombok.Data;
@@ -8,6 +9,7 @@ import org.apache.bcel.classfile.Method;
 import org.apache.bcel.generic.InstructionHandle;
 import org.apache.bcel.generic.Type;
 
+import java.util.Collections;
 import java.util.List;
 
 import static lombok.AccessLevel.PRIVATE;
@@ -24,7 +26,7 @@ public class CallPoint {
     Method method;
     JavaClass javaClass;
     @Builder.Default
-    List<CallPoint> callPoints = List.of();
+    List<CallPoint> callPoints = Collections.emptyList();
     boolean invokeDynamic;
     int referenceKind;
 }
